# loadlynx

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTEXT.md  DESIGN.md  Justfile  Makefile  PRODUCT.md  README.md  TODO.md  WORKFLOW.md  commitlint.config.cjs  lefthook.yml  loadlynx.ioc  mcu-agentd.toml  package-lock.json  package.json
.github/: quality-gates.json  release-label-policy.json
.github/scripts/: check-quality-gates-lib.mjs  check-quality-gates.mjs  check-quality-gates.test.mjs  check-workflow-hygiene.mjs  check-workflow-hygiene.test.mjs  compute-version.sh  prepare-pages-release-bundle.mjs  prepare-pages-release-bundle.test.mjs  release-labels.mjs  release-labels.test.mjs
.github/workflows/: check.yml  dev-release.yml  digital-check.yml  label-gate.yml  notify-release-failure.yml  release.yml  web-check.yml  web-pages.yml
.serena/: project.yml
docs/: README.md  SGM8552XS8G-TR.md  analog-board.md  control-board.md  esp32-s3-pin-mapping.md  fan_selection_wind_tunnel_60x60.md  load_mosfet_selection.md  ntc-temperature-sensing.md  opamp_selection.md  product-renders.md  tps22810-power-switch.md  uart-link.md
docs/boards/: control-board.md
docs/components/mosfets/: selection.md
docs/debug/: cc-loop-ch1-debug-log.md  gate-compensation-log.md
docs/dev-notes/: cc-load-switch-toggle.md  current-sense-opa2365-v4-2.md  cv-mode-presets-v1.md  cv-mode-presets.md  ft6336u-touch-int.md  hardware-quirks.md  hardware-v4-2-design.md  http-connection-and-frontend-fifo.md  ina193-vs-opa2365-stability.md  loadlynx-devd-hardware-ops.md  mcu-agentd.md  mdns-and-lan-discovery.md  on-device-preset-ui.md  preset-ui-protection-labels.md  prompt-tone-manager.md  software.md  storybook-component-workshop.md  uart-comm-troubleshooting.md  usb-pd-sink-toggle.md  user-calibration.md  web-layouts.md  web-responsive-drawer-sidebar.md
docs/fans/: fan_heatsink_integration_afb0612eh.md  fan_heatsink_integration_afc0612d.md  fan_heatsink_integration_pengdalantu_6025.md
docs/fans/datasheets/: CAIZHU-6025-12V.md  CROWN-AGF06025B12W.md  Delta-AFB0612EH-A.md  Delta-AFC0612D-SP07.md
docs/heatsinks/: wind_tunnel_60x60x60.md
docs/interfaces/: main-display-ui.md  network-control.md  network-http-api.md  touch-switch-and-rgb-led.md  uart-link.md  usb-cdc-jsonl-bridge.md
docs/interfaces/pinmaps/: esp32-s3.md
docs/load-mosfets/: IRFP260NPBF.md  IRFP4227PBF.md  IRFP4468PBF.md  IRFP4568PBF.md  IRFP4668PBF.md
docs/opamps/ti/: OPA2365AIDR.md  OPA2810.md
docs/other-datasheets/: 74lvc1g08-nexperia.md  d-ft6336u-datasheet-v1-1.md  esp32-s3.md  irfp260npbf.md  irfp4227pbf.md  irfp4468pbf.md  irfp4568pbf.md  irfp4668pbf.md  p024c128-ctp.md  tps22810.md
docs/plan/: README.md
docs/plan/0001:cc-load-switch-toggle/: PLAN.md
docs/plan/0002:cv-mode-presets/: PLAN.md
docs/plan/0003:ft6336u-touch-int/: PLAN.md
docs/plan/0004:mdns-and-lan-discovery/: PLAN.md
docs/plan/0005:on-device-preset-ui/: PLAN.md
docs/plan/0006:preset-ui-protection-labels/: PLAN.md
docs/plan/0007:prompt-tone-manager/: PLAN.md
docs/plan/0008:storybook-component-workshop/: PLAN.md
docs/plan/0009:uart-comm-troubleshooting/: PLAN.md
docs/plan/0010:usb-pd-sink-toggle/: PLAN.md
docs/plan/0011:web-layouts/: PLAN.md
docs/plan/0012:web-responsive-drawer-sidebar/: PLAN.md
docs/plan/0013:usb-pd-pps-and-fixed-settings/: PLAN.md
docs/plan/0014:web-usb-pd-settings/: PLAN.md
docs/plan/0015:auto-screen-dim-off/: PLAN.md
docs/plan/0016:pd-settings-touch-value-editor/: PLAN.md  preview-compare.html  preview.html  (+1 more)
docs/power/: tps22810-power-switch.md
docs/reverse_protection/: MBR30100CT.md
docs/specs/: README.md
docs/thermal/: ntc-temperature-sensing.md  over-temperature-protection.md
docs/user/: install-and-update.md
firmware/analog/: Cargo.toml  Makefile  build.rs
firmware/analog/.cargo/: config.toml
firmware/analog/src/: calibration.rs  lib.rs  main.rs  pd.rs
firmware/digital/: Cargo.toml  Makefile  build.rs  rust-toolchain.toml
firmware/digital/.cargo/: config.toml
firmware/digital/src/: control.rs  eeprom.rs  i2c0.rs  main.rs  mdns.rs  net.rs  prompt_tone.rs  speaker.rs  touch.rs
firmware/digital/src/ui/: audio_menu.rs  fonts.rs  fonts_data.rs  mod.rs  pd_panel.rs  pd_settings.rs  preset_panel.rs  setpoint_font_data.rs
firmware/eload-core/: Cargo.toml
firmware/host-bridge/: Cargo.toml
libs/calibration-format/: Cargo.toml  README.md
libs/led-effects/: Cargo.toml
libs/protocol/: Cargo.toml
libs/screen-power/: Cargo.toml
models/: loadlynx-shell-PartBack.step  loadlynx-shell-PartDisplay.step  loadlynx-shell-PartIO.step  loadlynx-shell-PartMain.step  loadlynx-shell.step
schemas/: firmware-catalog.schema.json
scripts/: agent_dual_monitor.sh  agent_verify_analog.sh  agent_verify_digital.sh  cp-acceptance.sh  ensure_esp32_port.sh  ensure_stm32_probe.sh  flash_g431.sh  flash_s3.sh  format_staged.sh  select_stm32_probe.sh  test-scan-helpers.ts
skills/loadlynx-developer-operations/: SKILL.md
skills/loadlynx-release-decision/: SKILL.md
skills/loadlynx-usb-devd/: SKILL.md
skills/loadlynx-user-operations/: SKILL.md
tools/firmware-catalog/: build-catalog-entry.py
tools/loadlynx-devd/: Cargo.toml
tools/loadlynx-devd/install/: install-loadlynx-host.ps1  install-loadlynx-host.sh
tools/loadlynx-devd/src/: compat_response.rs  lib.rs  serial_response.rs
tools/mcu-agentd/: Cargo.toml  README.md
tools/mcu-agentd/src/: config.rs  main.rs  model.rs  paths.rs  port_cache.rs  process.rs  server.rs  timefmt.rs
tools/ui-mock/: Cargo.toml
web/: .gitignore  README.md  biome.json  index.html  lefthook.yml  package-lock.json  package.json  playwright.config.ts  playwright.preview.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/.storybook/: main.ts  preview.tsx  test-runner.ts  vitest.setup.ts
web/public/: pwa-shell-guard.js
web/scripts/: check-bundles.ts  chunking.ts  gen-sevenseg-font.mjs  ports.ts  run-playwright.mjs  write-version.mjs
web/src/: app.tsx  env.d.ts  index.css  main.tsx  recharts-subpaths.d.ts  router.tsx
(+501 files in other folders)
