[package]
name = "analog"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
defmt-rtt = { version = "1.0.0", features = ["disable-blocking-mode"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.1"
static_cell = "2.1.0"

# Embassy (crates.io)
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "tick-hz-1_000"] }
embassy-stm32 = { version = "0.4", features = [
  "defmt",
  "time-driver-any",
  "stm32g431cb",
  "memory-x",
  "exti",
] }
embassy-embedded-hal = { version = "0.5" }
embassy-futures = { version = "0.1" }

[profile.dev]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
panic = 'abort'

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
panic = 'abort'

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]
