[package]
name = "analog"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
defmt-rtt = { version = "1.0.0", features = ["disable-blocking-mode"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.1"
static_cell = "2.1.0"

# Embassy (crates.io)
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "defmt"] }
# Match the reference PD sink bring-up (pd-sink-stm32g431cbu6-rs): higher tick rate avoids
# timer prescaler overflow and improves scheduling granularity at 170MHz SYSCLK.
embassy-time = { version = "0.5", features = ["defmt", "tick-hz-1_000_000"] }
embassy-stm32 = { version = "0.4", features = [
  "defmt",
  "time-driver-any",
  "stm32g431cb",
  "memory-x",
  "exti",
] }
embassy-sync = { version = "0.5", features = ["defmt"] }
embassy-embedded-hal = { version = "0.5" }
embassy-futures = { version = "0.1" }
loadlynx-protocol = { path = "../../libs/protocol", features = ["defmt"] }
stm32-metapac = { version = "18.0.0", features = ["stm32g431cb"] }
libm = "0.2.8"
heapless = { version = "0.8", default-features = false }
minicbor = { version = "0.24", default-features = false, features = ["derive"] }
usbpd = { version = "1.1.3", features = ["defmt"] }
usbpd-traits = { version = "1.1.0" }
uom = { version = "0.36.0", default-features = false, features = ["si", "u32"] }

[profile.dev]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
panic = 'abort'

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
panic = 'abort'

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[features]
default = []
# Temporary bring-up / stress-test knob: raise software hard power limit to 200W.
pmax_200w_test = []
