[package]
name = "digital"
version = "0.1.0"
edition = "2024"

[dependencies]
static_cell = "2.1"
embassy-executor = { version = "0.9", features = ["arch-spin", "executor-thread", "defmt"] }
embassy-futures = "0.1"
defmt = "1.0.1"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-graphics = "0.8"
lcd-async = "0.1.1"
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32s3"] }
embedded-io = "0.6"
embedded-hal-nb = "1.0"
nb = "1.1"
heapless = "0.8"
embassy-sync = { version = "0.5" }
loadlynx-protocol = { path = "../../libs/protocol" }

# HAL + Embassy integration for ESP32-S3
esp-hal = { version = "=1.0.0-rc.1", features = ["esp32s3", "rt", "unstable", "defmt"] }

# Logging & panic/backtrace on ESP (defmt over espflash)
esp-println = { version = "0.16", default-features = false, features = ["esp32s3", "uart", "defmt-espflash"] }
esp-backtrace = { version = "0.18", features = ["esp32s3", "panic-handler", "defmt"] }

[profile.dev]
opt-level = "z"
debug = true
debug-assertions = true
overflow-checks = true
codegen-units = 1
incremental = false
lto = false
panic = "abort"

[profile.release]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
incremental = false
lto = "fat"
panic = "abort"

[features]
default = ["enable_analog_5v_on_boot", "esp32s3"]
enable_analog_5v_on_boot = []
esp32s3 = []
