[package]
name = "loadlynx-devd"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
async-stream = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
futures-core = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "loadlynx-devd"
path = "src/bin/loadlynx-devd.rs"

[[bin]]
name = "loadlynx"
path = "src/bin/loadlynx.rs"
