[package]
name = "loadlynx-agentd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"
fs2 = "0.4"
directories = "5.0"
humantime = "2.3.0"
nix = { version = "0.30.1", features = ["signal"] }
dialoguer = "0.11"
serialport = "4.3"
